feat: Add scripting to build python-wasm images

--- a/images/python/Dockerfile
+++ b/images/python/Dockerfile
@@ -1,8 +1,18 @@
 FROM scratch
-ARG BUILD_OUTPUT_BASE=build-output
-ARG PYTHON_TAG=v3.11.1
-ARG PYTHON_BINARY=python-wasmedge.wasm
-COPY ${BUILD_OUTPUT_BASE}/python/${PYTHON_TAG}/bin/${PYTHON_BINARY} /python.wasm
-COPY ${BUILD_OUTPUT_BASE}/python/${PYTHON_TAG}/usr/ /usr
+
+ARG NAME
+ARG SUMMARY
+LABEL description="${SUMMARY}" \
+      app.kubernetes.io/name="${NAME}" \
+      org.opencontainers.image.title="${NAME}" \
+      org.opencontainers.image.vendor="wasmlabs.dev" \
+      org.opencontainers.image.description="${SUMMARY}" \
+      org.opencontainers.image.source="https://github.com/vmware-labs/webassembly-language-runtimes" \
+      org.opencontainers.artifact.description="${SUMMARY}"
+
+ARG ARTIFACTS_BASE_DIR
+ARG PYTHON_BINARY
+COPY ${ARTIFACTS_BASE_DIR}/bin/${PYTHON_BINARY} /python.wasm
+COPY ${ARTIFACTS_BASE_DIR}/usr/ /usr
 
 ENTRYPOINT [ "python.wasm" ]
