--- a/.github/workflows/build-python.yaml
+++ b/.github/workflows/build-python.yaml
@@ -42,4 +42,6 @@ jobs:
           path: |
             build-output/python/v${{ matrix.version }}${{ matrix.suffix }}/bin/python-${{ matrix.version }}${{ matrix.suffix }}.wasm
             build-output/python/v${{ matrix.version }}${{ matrix.suffix }}/usr
+            build-output/python/v${{ matrix.version }}${{ matrix.suffix }}/include
+            build-output/python/v${{ matrix.version }}${{ matrix.suffix }}/lib
           if-no-files-found: error
