--- a/.github/workflows/build-zlib.yaml
+++ b/.github/workflows/build-zlib.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build Zlib
-        run: make libs/zlib/v${{ matrix.version }}
+        run: make libs/zlib/v${{ matrix.version }} -d
       - name: Upload zlib-${{ matrix.version }} artifact
         uses: actions/upload-artifact@v3
         with:
