--- a/.github/workflows/build-zlib.yaml
+++ b/.github/workflows/build-zlib.yaml
@@ -20,17 +20,9 @@ jobs:
       matrix:
         include:
           - version: 1.2.13
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Build Zlib
-        run: make libs/zlib/v${{ matrix.version }} -d
-      - name: Upload zlib-${{ matrix.version }} artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: zlib-${{ matrix.version }}
-          path: |
-            build-output/zlib/v${{ matrix.version }}/include
-            build-output/zlib/v${{ matrix.version }}/lib
-          if-no-files-found: error
+    uses: ./.github/workflows/reusable-build-lib.yaml
+    with:
+      name: "zlib"
+      version: ${{ matrix.version }}
+      target-name: "zlib"
+      tag-prefix: "v"
