--- a/.github/workflows/release-zlib.yaml
+++ b/.github/workflows/release-zlib.yaml
@@ -11,78 +11,9 @@ on:
       - libs/zlib/*
 jobs:
   release-zlib:
-    strategy:
-      matrix:
-        include:
-          - version: 1.2.13
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref,  format('refs/tags/libs/zlib/{0}+', matrix.version))
-        uses: actions/checkout@v3
-      - name: Build Zlib
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/libs/zlib/{0}+', matrix.version))
-        run: make libs/zlib/v${{ matrix.version }}
-      - name: Bundle Zlib with standard libraries
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/libs/zlib/{0}+', matrix.version))
-        run: |
-          pushd build-output/zlib/v${{ matrix.version }}
-          sudo zip -qq -r zlib-${{ matrix.version }}.zip include lib
-          popd
-      - name: Create release
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: startsWith(github.event.ref, format('refs/tags/libs/zlib/{0}+', matrix.version))
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create --generate-notes ${{ github.ref_name }} || true
-      - name: Append Zlib release assets
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/libs/zlib/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} \
-            build-output/zlib/v${{ matrix.version }}/zlib-${{ matrix.version }}.zip
-      - name: Generate release assets digests
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/libs/zlib/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          for asset in build-output/zlib/v${{ matrix.version }}/zlib-${{ matrix.version }}.zip; do
-            sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
-          done
-      - name: Append release assets digests
-        # Only run for the Zlib version specified in the git tag.
-        #
-        # This if could be moved to the parent `job` section when it's
-        # supported by GitHub (https://github.com/community/community/discussions/37883)
-        if: ${{ startsWith(github.event.ref, format('refs/tags/libs/zlib/{0}+', matrix.version))}}
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} \
-            build-output/zlib/v${{ matrix.version }}/zlib-${{ matrix.version }}.zip.sha256sum
-
+    uses: ./.github/workflows/reusable-release-lib.yaml
+    with:
+      name: "zlib"
+      target-name: "zlib"
+      tag-prefix: "v"
+      trigger: ${{ github.event.ref }}
