--- a/.github/workflows/reusable-release-lib.yaml
+++ b/.github/workflows/reusable-release-lib.yaml
@@ -5,9 +5,6 @@ on:
       name:
         required: true
         type: string
-      version:
-        required: true
-        type: string
       target-name:
         required: true
         type: string
@@ -22,20 +19,23 @@ jobs:
     strategy:
       fail-fast: false
     runs-on: ubuntu-latest
-    # Only run for the ${{ inputs.target-name }} version specified in the git tag, which triggered this.
-    if: startsWith(${{ inputs.trigger }}, format('refs/tags/libs/{0}/{1}+', inputs.target-name, inputs.version))
     steps:
+      - name: Determine version
+        id: calculateVersion
+        run: |
+          VERSION=$(echo ${{ inputs.trigger }} | sed 's,refs/tags/libs/${{ inputs.target-name }}/,,g' | cut -f 1 -d \+)
+          echo "value=${VERSION}" >> $GITHUB_OUTPUT
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build ${{ inputs.name }}
-        run: make libs/${{ inputs.target-name }}/${{ inputs.tag-prefix }}${{ inputs.version }}
+        run: make libs/${{ inputs.target-name }}/${{ inputs.tag-prefix }}${{ steps.calculateVersion.outputs.value }}
       - name: Package ${{ inputs.name }}-.tar.gz
         run: |
-          tar -cvf ${{ inputs.name }}-${{ inputs.version }}.tar \
-            -C build-output/${{ inputs.target-name }}/${{ inputs.tag-prefix }}${{ inputs.version }}/ \
+          tar -cvf ${{ inputs.name }}-${{steps.calculateVersion.outputs.value}}.tar \
+            -C build-output/${{ inputs.target-name }}/${{ inputs.tag-prefix }}${{ steps.calculateVersion.outputs.value }}/ \
             include \
             lib
-          gzip ${{ inputs.name }}-${{ inputs.version }}.tar
+          gzip ${{ inputs.name }}-${{ steps.calculateVersion.outputs.value }}.tar
       - name: Create release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -46,12 +46,12 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            ${{ inputs.name }}-${{ inputs.version }}.tar.gz
+            ${{ inputs.name }}-${{ steps.calculateVersion.outputs.value }}.tar.gz
       - name: Generate release assets digests
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for asset in ${{ inputs.name }}-${{ inputs.version }}.tar.gz; do
+          for asset in ${{ inputs.name }}-${{ steps.calculateVersion.outputs.value }}.tar.gz; do
             sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
           done
       - name: Append release assets digests
@@ -59,5 +59,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            ${{ inputs.name }}-${{ inputs.version }}.tar.gz.sha256sum
+            ${{ inputs.name }}-${{ steps.calculateVersion.outputs.value }}.tar.gz.sha256sum
 
