chore: Rename reusable GH WFL param target-prefix

--- a/.github/workflows/build-liboniguruma.yaml
+++ b/.github/workflows/build-liboniguruma.yaml
@@ -26,4 +26,4 @@ jobs:
       name: "libonig"
       version: ${{ matrix.version }}
       target-name: "oniguruma"
-      tag-prefix: "v"
+      target-prefix: "v"
