--- a/.github/workflows/build-libuuid.yaml
+++ b/.github/workflows/build-libuuid.yaml
@@ -26,4 +26,4 @@ jobs:
       name: "libuuid"
       version: ${{ matrix.version }}
       target-name: "uuid"
-      tag-prefix: "libuuid-"
+      target-prefix: "libuuid-"
