--- a/.github/workflows/reusable-release-lib.yaml
+++ b/.github/workflows/reusable-release-lib.yaml
@@ -8,7 +8,7 @@ on:
       target-name:
         required: true
         type: string
-      tag-prefix:
+      target-prefix:
         required: true
         type: string
       trigger:
@@ -28,11 +28,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build ${{ inputs.name }}
-        run: make libs/${{ inputs.target-name }}/${{ inputs.tag-prefix }}${{ steps.determineVersion.outputs.value }}
+        run: make libs/${{ inputs.target-name }}/${{ inputs.target-prefix }}${{ steps.determineVersion.outputs.value }}
       - name: Package ${{ inputs.name }}-${{ steps.determineVersion.outputs.value }}.tar.gz
         run: |
           tar -cvf ${{ inputs.name }}-${{steps.determineVersion.outputs.value}}.tar \
-            -C build-output/${{ inputs.target-name }}/${{ inputs.tag-prefix }}${{ steps.determineVersion.outputs.value }}/ \
+            -C build-output/${{ inputs.target-name }}/${{ inputs.target-prefix }}${{ steps.determineVersion.outputs.value }}/ \
             include \
             lib
           gzip ${{ inputs.name }}-${{ steps.determineVersion.outputs.value }}.tar
