--- a/.github/workflows/build-libxml2.yaml
+++ b/.github/workflows/build-libxml2.yaml
@@ -26,4 +26,4 @@ jobs:
       name: "libxml2"
       version: ${{ matrix.version }}
       target-name: "libxml2"
-      tag-prefix: "v"
+      target-prefix: "v"
