--- a/.github/workflows/release-liboniguruma.yaml
+++ b/.github/workflows/release-liboniguruma.yaml
@@ -13,5 +13,5 @@ jobs:
     with:
       name: "libonig"
       target-name: "oniguruma"
-      tag-prefix: "v"
+      target-prefix: "v"
       trigger: ${{ github.event.ref }}
