chore: Add curl to wasi-builder

--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -23,6 +23,7 @@ RUN apt update && \
         build-essential \
         cmake \
         clang \
+        curl \
         git \
         libtool \
         libtool-bin \
