fix: WasmLabs Bundle build name

--- a/.github/workflows/build-bundle-wasmlabs.yaml
+++ b/.github/workflows/build-bundle-wasmlabs.yaml
@@ -1,4 +1,4 @@
-name: Build Lib Oniguruma
+name: Build Lib Wasmlabs Bundle
 on:
   push:
     # By specifying branches explicitly, we avoid this workflow from
