--- a/Makefile.helpers
+++ b/Makefile.helpers
@@ -25,6 +25,12 @@ define make_builder_image
 endef
 
 
+##########
+# Builds a wl-make target inside a container.
+# USAGE:
+#  - Inside a GNU make target
+#  - @$(call build_in_container,ghcr.io/vmware-labs/wasmlabs/wasi-builder:19,$(REPO_ROOT),libs/zlib/v1.2.13)
+#
 define build_in_container
     $(eval $@_IMAGE_NAME = $(1))
     $(eval $@_REPO_ROOT = $(2))
@@ -34,8 +40,61 @@ define build_in_container
 		--rm \
 		-e WASMLABS_BUILD_FLAVOR \
 		-e WASMLABS_RUNTIME \
+		-e WASMLABS_PACKAGE_NAME \
+		-e WASMLABS_PACKAGE_VERSION \
+		-e WLR_DEPS_FORCE_LOCAL \
 		-v $($@_REPO_ROOT):/wlr/ \
 		-v $($@_REPO_ROOT)/scripts/wrappers/wasm-opt:/opt/priority-bin/wasm-opt \
 		$($@_IMAGE_NAME) \
 		./wl-make.sh $($@_WL_MAKE_TARGET)
+endef
+
+
+##########
+# Creates lib subtargets targets for lib without extra builder container.
+#
+# USAGE:
+#  - At root level (not as part of a target)
+#  - Within the $(REPO_ROOT)/Makefile
+#  - $(eval $(call create_lib_sub_targets,zlib))
+#  - $(eval $(call create_lib_sub_targets,uuid))
+
+define create_lib_sub_targets
+# $1 - LIB_NAME
+
+.PHONY: libs/$(1)/*
+libs/$(1)/*:
+	make -C libs/$(1) $$(subst libs/$(1)/,,$$@)
+
+endef
+
+
+##########
+# Creates default targets for lib without extra builder container.
+#
+# USAGE:
+#  - At Makefile root level (not as part of a target)
+#  - Within the lib/LIBNAME/Makefile
+#  - $(eval $(call create_default_lib_targets,$(REPO_ROOT),zlib,v,$(WASI_SDK_VERSION)))
+#  - $(eval $(call create_default_lib_targets,$(REPO_ROOT),uuid,libuuid-,$(WASI_SDK_VERSION)))
+#
+define create_default_lib_targets
+# $1 - REPO_ROOT
+# $2 - LIB_NAME
+# $3 - TARGET_PREFIX
+# $4 - WASI_SDK_VERSION
+
+$(eval $(2)_BUILDER = ghcr.io/vmware-labs/wasmlabs/wasi-builder:$(4))
+
+.PHONY: $(3)*
+$(3)*:
+	@$(call build_in_container,$($(2)_BUILDER),$(1),libs/$(2)/$$$$@)
+
+# The four $$-s are there because we have two passes in which we escape $ by a double $.
+# We need the $@ variable only when the target is actually built
+
+.PHONY: clean
+clean:
+	rm -rf $(1)/build-output/$(2) $(1)/build-staging/$(2)
+
 endef
